# ripasso-gnome-search-provider

./: Cargo.toml  README.md  install.sh
conf/: io.m51.Pass.SearchProvider.desktop  io.m51.Pass.SearchProvider.service.dbus  io.m51.Pass.SearchProvider.service.systemd  io.m51.Pass.search-provider.ini
src/: main.rs
