[package]
name = "ripasso-gnome-search-provider"
version = "1.2.0"
edition = "2021"
authors = ["Austin Riba <austin@m51.io>"]

[dependencies]
arboard = { version = "3.4.1", default-features = false }
ripasso = { git = "https://github.com/cortex/ripasso.git" }
search-provider = { version = "0.10.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.43.0", features = ["macros"] }
zbus = { version = "5.3.1", features = ["tokio"] }
zeroize = "1.8.1"

